3.nginx_routing/1_loadbalancer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: clean
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-nginx # ⭐️ 해당 deployment는 labels.app=nginx인 파드만을 관리하겠다.
  template:
  # 아래 labels.app 부분은 service의 selector 부분과 일치해야하고, 위의 matchLabels 부분과도 일치해야함
    metadata:
      labels:
        app: my-nginx  # ⭐️
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
          - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: clean
spec: 
  type: LoadBalancer # 하지만 이 방법도 많이 쓰지는 않는다. 서비스가 26개면, 로드밸런서도 26개인 아키텍처이다.
  ports:
    - name: http
      port: 80
      targetPort: 80 # 파드의 내부 포트와 일치
  selector:
    app: my-nginx
